# Verify2Trade

./: .dockerignore  .gitignore  API.md  README.md  config.yaml  docker-compose.yml  for_test.py  prompt.txt  run_test.sh  run_test_container.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: ai.rs  api.rs  charting.rs  engine.rs  indicators.rs  main.rs  settings.rs
backend/src/data/: mod.rs
backend/src/strategy/: ma_touch.rs  mod.rs
charts/data/: BTCUSDT_1h.parquet
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.svelte  types.ts
frontend/src/components/: BacktestConfig.svelte  Chart.svelte  ProgressBar.svelte  ResultsTable.svelte
