[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.1"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
duckdb = { version = "1.4.3", features = ["bundled"] }
futures = "0.3.31"
image = "0.25.9"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "point_series", "area_series", "candlestick"] }
polars = { version = "0.42.0", features = ["lazy", "parquet", "dtype-datetime", "dtype-date", "dtype-time", "dtype-duration", "rolling_window", "dynamic_group_by"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
